# src/controllers/caseController.js
@@ -1,28 +1,51 @@
 const Case = require("../models/Case");
 const SuccessHandler = require("../utils/SuccessHandler");
 const ErrorHandler = require("../utils/ErrorHandler");
-const { ideahub_v1beta } = require("googleapis");
-
+const cloud = require("../functions/cloudinary");
+const path = require("path");
 //create case
 const createCase = async (req, res) => {
   // #swagger.tags = ['case']
   try {
+    const {denialScreenShots,encounterScreenShots} =  req.files
     const {
       currentClaim,
       prevClaimDOS,
       prevClaimCPT,
-      denialScreenShots,
-      encounterScreenShots,
       denialText,
       encounterText,
       primaryPayer,
     } = req.body;
+
+let denialScreenShotsUrl = [];
+let encounterScreenShotsUrl = [];
+
+if (denialScreenShots?.length > 0) {
+  denialScreenShotsUrl = await Promise.all(
+    denialScreenShots.map(async (img) => {
+      const filePath = `${Date.now()}-${path.parse(img.originalname).name}`;
+    const res = await cloud.uploadStreamImage(img.buffer, filePath);
+      return res?.secure_url
+    })
+  );
+}
+
+if (encounterScreenShots?.length > 0) {
+  encounterScreenShotsUrl = await Promise.all(
+    encounterScreenShots.map(async (img) => {
+      const filePath = `${Date.now()}-${path.parse(img.originalname).name}`;
+       const res = await cloud.uploadStreamImage(img.buffer, filePath);
+      return res?.secure_url
+    })
+  );
+}
+
     const newCase = await Case.create({
       currentClaim,
       prevClaimDOS,
       prevClaimCPT,
-      denialScreenShots,
-      encounterScreenShots,
+      denialScreenShots : denialScreenShotsUrl,
+      encounterScreenShots : encounterScreenShotsUrl,
       denialText,
       encounterText,
       primaryPayer,
@@ -61,7 +84,14 @@ const updateCase = async (req, res) => {
       return ErrorHandler("Case not found", 404, req, res);
     }
 
-    isCaseExist.currentClaim = currentClaim
+    isCaseExist.currentClaim = currentClaim || isCaseExist.currentClaim
+    isCaseExist.prevClaimDOS = prevClaimDOS || isCaseExist.prevClaimDOS
+    isCaseExist.prevClaimCPT = prevClaimCPT || isCaseExist.prevClaimCPT
+    isCaseExist.denialScreenShots = denialScreenShots || isCaseExist.denialScreenShots
+    isCaseExist.encounterScreenShots = encounterScreenShots || isCaseExist.encounterScreenShots
+    isCaseExist.denialText = denialText || isCaseExist.denialText
+    isCaseExist.encounterText = encounterText || isCaseExist.encounterText
+    isCaseExist.primaryPayer = primaryPayer || isCaseExist.primaryPayer
 
     return SuccessHandler(
       {
@@ -77,4 +107,5 @@ const updateCase = async (req, res) => {
 
 module.exports = {
   createCase,
+  updateCase
 };
